--- a/exercises/maven-project/pom.xml
+++ b/exercises/maven-project/pom.xml
@@ -15,10 +15,23 @@
   </properties>
 
   <dependencies>
-    <!-- TODO #1: Add commons-lang3 here  -->
+	  <!-- TODO #1: Add commons-lang3 here  -->
 
-    <!-- TODO #2: Add a second external dependency (e.g., Gson) -->
-  </dependencies>
+<dependency>
+  <groupId>org.apache.commons</groupId>
+  <artifactId>commons-lang3</artifactId>
+  <version>3.12.0</version>
+</dependency>
+
+<!-- TODO #2: Add a second external dependency (e.g., Gson) -->
+
+<dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.10.1</version>
+    </dependency>
+ 
+</dependencies>
 
   <build>
     <plugins>
